--- a/style/contact.css
+++ b/style/contact.css
@@ -17,7 +17,7 @@
   display: block;
   color: gray;
   font-size: 1.2rem;
-  margin-bottom: 3px;
+  margin: 6px 0;
 }
 .left-contact form input {
   width: 100%;
