--- a/style/contact.scss
+++ b/style/contact.scss
@@ -21,7 +21,7 @@
             display: block;
             color: gray;
             font-size: 1.2rem;
-            margin-bottom: 3px;
+            margin: 6px 0;
         }
         input{
             width: 100%;
