--- a/style/portfolio.scss
+++ b/style/portfolio.scss
@@ -23,6 +23,10 @@
             height: fit-content;
             position: relative;
             width: 46%;
+            cursor: pointer;
+            &:hover{
+                opacity: 0.7;
+            }
             img{
                 width: 100%;
             }
